--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "theseer/phpdox": "@stable",
     "phploc/phploc": "*",
     "squizlabs/php_codesniffer": "*",
-    "phpspec/prophecy": "~v1.6.1"
+    "phpspec/prophecy": "~v1.6.1",
+    "behat/mink-extension": "^2.2",
+    "behat/mink-goutte-driver": "^1.2"
   },
 
   "config" : { "bin-dir" : "bin"},
